[gd_scene load_steps=4 format=2]

[ext_resource path="res://Elements/VaribleSetter.gd" type="Script" id=1]
[ext_resource path="res://Other/PanelWithCorners.tres" type="StyleBox" id=2]

[sub_resource type="GDScript" id=1]
script/source = "extends CheckBox

func _physics_process(delta):
	if pressed:	text = \"True\"
	else: text = \"False\"
"

[node name="VaribleSetter" type="MarginContainer"]
margin_right = 213.0
margin_bottom = 30.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 287.0
margin_bottom = 25.0
custom_styles/panel = ExtResource( 2 )

[node name="All" type="HBoxContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 287.0
margin_bottom = 25.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="All"]
margin_right = 120.0
margin_bottom = 20.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 3
text = "Name"
align = 1
clip_text = true

[node name="VSeparator" type="VSeparator" parent="All"]
margin_left = 124.0
margin_right = 128.0
margin_bottom = 20.0

[node name="Start" type="HBoxContainer" parent="All"]
margin_left = 132.0
margin_right = 282.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="TabContainer" type="TabContainer" parent="All/Start"]
margin_right = 150.0
margin_bottom = 20.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 6
tabs_visible = false

[node name="Enpty" type="Control" parent="All/Start/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0

[node name="CheckButton" type="CheckBox" parent="All/Start/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 4
text = "False"
script = SubResource( 1 )

[node name="SpinBox" type="SpinBox" parent="All/Start/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 6
min_value = -9999.0
max_value = 9999.0
allow_greater = true
allow_lesser = true

[node name="LineEdit" type="LineEdit" parent="All/Start/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0
caret_blink = true
caret_blink_speed = 0.5

[node name="Current" type="HBoxContainer" parent="All"]
visible = false
margin_top = 48.0
margin_right = 150.0
margin_bottom = 68.0

[node name="CurrentValue" type="Label" parent="All/Current"]
margin_right = 150.0
margin_bottom = 20.0
size_flags_horizontal = 3

[connection signal="toggled" from="All/Start/TabContainer/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="value_changed" from="All/Start/TabContainer/SpinBox" to="." method="_on_SpinBox_value_changed"]
[connection signal="text_changed" from="All/Start/TabContainer/LineEdit" to="." method="_on_LineEdit_text_changed"]
